--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="manifest" href="manifest.json">
     <script src="scripts/main.js" defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcK4Zz2W_loxS4kmS5KZ2iujrHdN9WMvE&callback=initMap" defer></script>
 </head>
 <body>
     <div id="map"></div>
