"Add filter functionality"

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcK4Zz2W_loxS4kmS5KZ2iujrHdN9WMvE&callback=initMap" defer></script>
 </head>
 <body>
+    <div class="filters">
+        <button class="filter-btn" data-type="All">All</button>
+        <button class="filter-btn" data-type="Asian">Asian</button>
+        <button class="filter-btn" data-type="Western">Western</button>
+        <button class="filter-btn" data-type="International">International</button>
+        <button class="filter-btn" data-type="Contemporary">Contemporary</button>
+    </div>
     <div id="map"></div>
 </body>
 </html>
-
-
