--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,12 +11,14 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcK4Zz2W_loxS4kmS5KZ2iujrHdN9WMvE&callback=initMap" defer></script>
 </head>
 <body>
-    <div class="filters">
-        <button class="filter-btn" data-type="All">All</button>
-        <button class="filter-btn" data-type="Asian">Asian</button>
-        <button class="filter-btn" data-type="Western">Western</button>
-        <button class="filter-btn" data-type="International">International</button>
-        <button class="filter-btn" data-type="Contemporary">Contemporary</button>
+    <div class="header">
+        <div class="filters">
+            <button class="filter-btn" data-type="All">All</button>
+            <button class="filter-btn" data-type="Asian">Asian</button>
+            <button class="filter-btn" data-type="Western">Western</button>
+            <button class="filter-btn" data-type="International">International</button>
+            <button class="filter-btn" data-type="Contemporary">Contemporary</button>
+        </div>
     </div>
     <div id="map"></div>
 </body>
